# crucible

./: .gitignore  README.md  pyproject.toml
Bear/: .env.example
Bear/notebooks/: bear1.ipynb  bear2.ipynb  bear4.ipynb
